manifests/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  annotations:
    ignore-check.kube-linter.io/no-rolling-update-strategy: "Using Recreate strategy to avoid issues with ReadWriteOnce volumes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      restartPolicy: Always
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.20@sha256:1f19eb5e0f421418c1a956bbe01310a0141423afe28bd9a4b1dcb8629ff2bce2
          ports:
            - containerPort: 8989
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: media
              mountPath: /media
          livenessProbe:
            tcpSocket:
              port: 8989
          readinessProbe:
            tcpSocket:
              port: 8989
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: tmp
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
